# zankora

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  IMPROVEMENTS.md  LANGGRAPH_IMPLEMENTATION.md  LICENSE  Makefile  README.md  docker-compose.yml  env  pyproject.toml
docs/: architecture.md  deployment.md  langgraph-engine.md  plugin-development.md  protocol.md  security-hardening.md
examples/: README.md  langgraph_example.py  langgraph_example_real.py
gateway/: __init__.py  __main__.py  bus.py  cli.py  config.py
gateway/agent/: engine.py  langgraph_engine.py  llm.py  runner.py
gateway/channels/: base.py  telegram.py  webchat.py  whatsapp_business.py
gateway/core/: circuit_breaker.py  gateway.py  retry.py
gateway/domain/: models.py
gateway/observability/: logging.py  metrics.py
gateway/persistence/: db.py  migrations.py  repo.py  schema.py
gateway/plugins/: loader.py  registry.py
gateway/protocol/: ws_models.py
gateway/security/: auth.py  policy_engine.py  rate_limit.py  sanitize.py
gateway/server/: app.py  ws.py
gateway/tools/: registry.py
monitoring/: prometheus.yml
nginx/: nginx.conf
plugins/math_tools/: plugin.py
plugins/sample_echo/: plugin.py
plugins/web_search/: plugin.py
tests/: test_langgraph_engine.py  test_plugins.py  test_policy.py  test_ws_router.py
webchat/: index.html
