[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zankora-gateway"
version = "0.2.0"
description = "Production-ready multi-channel Zankora — Secure Agent Orchestration Gateway"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Zankora Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "aiosqlite>=0.19.0",
    "alembic>=1.13.0",
    "structlog>=24.1.0",
    "prometheus-client>=0.19.0",
    "python-multipart>=0.0.6",
    "websockets>=12.0",
    "httpx>=0.26.0",
    "typer>=0.9.0",
    "rich>=13.7.0",
    "orjson>=3.9.0",
    "python-dotenv>=1.0.0",
    "psutil>=5.9.0",
    "tenacity>=8.2.3",
    "pyrate-limiter>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.2.0",
    "black>=24.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "ipython>=8.19.0",
]

telegram = [
    "python-telegram-bot>=20.7",
]

whatsapp = [
    "twilio>=8.11.0",
]

anthropic = [
    "anthropic>=0.25.0",
]

openai = [
    "openai>=1.10.0",
]

agentic = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
]

all = [
    "zankora-gateway[dev,telegram,whatsapp,anthropic,openai,agentic]",
]

[project.scripts]
# Branding principal
zankora = "gateway.cli:main"
zankora-gateway = "gateway.__main__:main"

# Backward compatibility (opcional)
agw = "gateway.cli:main"
agent-gateway = "gateway.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["gateway*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=gateway",
    "--cov-report=term-missing",
    "--cov-report=html",
]
timeout = 30
markers = [
    "integration: marks tests as integration tests",
    "slow: marks tests as slow",
    "unit: marks tests as unit tests",
]

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 120
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long (black handles this)
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "telegram.*",
    "twilio.*",
    "anthropic.*",
]
ignore_missing_imports = true
